@@ -1,11 +1,10 @@
-package ru.yandex.practicum.mymarket;
+package ru.yandex.practicum.mymarket.integration;
 
+import com.github.f4b6a3.uuid.UuidCreator;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.web.servlet.MockMvc;
-import ru.yandex.practicum.mymarket.model.CartItem;
+import ru.yandex.practicum.mymarket.BaseIntegrationTest;
 import ru.yandex.practicum.mymarket.repository.CartRepository;
 
 import java.util.UUID;
@@ -16,9 +15,7 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-@SpringBootTest
-@AutoConfigureMockMvc
-public class CartIntegrationTest {
+public class CartIntegrationTest extends BaseIntegrationTest {
 
     @Autowired
     private MockMvc mockMvc;
@@ -28,7 +25,7 @@ public class CartIntegrationTest {
 
     @Test
     void testUpdateItemCountPlus() throws Exception {
-        UUID sessionId = UUID.randomUUID();
+        UUID sessionId = UuidCreator.getTimeOrderedEpoch();
         Long itemId = 1L;
 
         mockMvc.perform(post("/items")
@@ -44,8 +41,8 @@ public class CartIntegrationTest {
 
         var cartItems = cartRepository.findBySessionId(sessionId);
         assertEquals(1, cartItems.size());
-        assertEquals(itemId, cartItems.get(0).getItem().getId());
-        assertEquals(1, cartItems.get(0).getCount());
+        assertEquals(itemId, cartItems.getFirst().getItem().getId());
+        assertEquals(1, cartItems.getFirst().getCount());
 
         // Increase count
         mockMvc.perform(post("/items")
@@ -56,24 +53,24 @@ public class CartIntegrationTest {
 
         cartItems = cartRepository.findBySessionId(sessionId);
         assertEquals(1, cartItems.size());
-        assertEquals(2, cartItems.get(0).getCount());
+        assertEquals(2, cartItems.getFirst().getCount());
     }
 
     @Test
     void testUpdateItemCountMinus() throws Exception {
-        UUID sessionId = UUID.randomUUID();
-        Long itemId = 1L;
+        UUID sessionId = UuidCreator.getTimeOrderedEpoch();
+        long itemId = 1L;
 
         // Add item first
         mockMvc.perform(post("/items")
-                        .param("id", itemId.toString())
+                        .param("id", Long.toString(itemId))
                         .param("action", "PLUS")
                         .cookie(new jakarta.servlet.http.Cookie("SESSION_ID", sessionId.toString())))
                 .andExpect(status().is3xxRedirection());
 
         // Decrease count
         mockMvc.perform(post("/items")
-                        .param("id", itemId.toString())
+                        .param("id", Long.toString(itemId))
                         .param("action", "MINUS")
                         .cookie(new jakarta.servlet.http.Cookie("SESSION_ID", sessionId.toString())))
                 .andExpect(status().is3xxRedirection());
@@ -84,18 +81,18 @@ public class CartIntegrationTest {
 
     @Test
     void testGetItemWithCount() throws Exception {
-        UUID sessionId = UUID.randomUUID();
-        Long itemId = 1L;
+        UUID sessionId = UuidCreator.getTimeOrderedEpoch();
+        long itemId = 1L;
 
         // Добавляем товар в корзину (2 штуки)
         mockMvc.perform(post("/items")
-                        .param("id", itemId.toString())
+                        .param("id", Long.toString(itemId))
                         .param("action", "PLUS")
                         .cookie(new jakarta.servlet.http.Cookie("SESSION_ID", sessionId.toString())))
                 .andExpect(status().is3xxRedirection());
 
         mockMvc.perform(post("/items")
-                        .param("id", itemId.toString())
+                        .param("id", Long.toString(itemId))
                         .param("action", "PLUS")
                         .cookie(new jakarta.servlet.http.Cookie("SESSION_ID", sessionId.toString())))
                 .andExpect(status().is3xxRedirection());
@@ -110,12 +107,12 @@ public class CartIntegrationTest {
 
     @Test
     void testGetCartItems() throws Exception {
-        UUID sessionId = UUID.randomUUID();
-        Long itemId = 1L;
+        UUID sessionId = UuidCreator.getTimeOrderedEpoch();
+        long itemId = 1L;
 
         // Добавляем товар в корзину
         mockMvc.perform(post("/items")
-                        .param("id", itemId.toString())
+                        .param("id", Long.toString(itemId))
                         .param("action", "PLUS")
                         .cookie(new jakarta.servlet.http.Cookie("SESSION_ID", sessionId.toString())))
                 .andExpect(status().is3xxRedirection());
@@ -129,5 +126,64 @@ public class CartIntegrationTest {
                 .andExpect(model().attributeExists("total"))
                 .andExpect(model().attribute("items", org.hamcrest.Matchers.hasSize(1)))
                 .andExpect(model().attribute("total", org.hamcrest.Matchers.notNullValue()));
+    }
+
+    @Test
+    void testUpdateItemCountOnPage() throws Exception {
+        UUID sessionId = UuidCreator.getTimeOrderedEpoch();
+        long itemId = 1L;
+
+        // Увеличиваем количество со страницы товара
+        mockMvc.perform(post("/items/" + itemId)
+                        .param("action", "PLUS")
+                        .cookie(new jakarta.servlet.http.Cookie("SESSION_ID", sessionId.toString())))
+                .andExpect(status().is3xxRedirection())
+                .andExpect(redirectedUrl("/items/" + itemId));
+
+        var cartItems = cartRepository.findBySessionId(sessionId);
+        assertEquals(1, cartItems.size());
+        assertEquals(1, cartItems.getFirst().getCount());
+
+        // Уменьшаем количество со страницы товара
+        mockMvc.perform(post("/items/" + itemId)
+                        .param("action", "MINUS")
+                        .cookie(new jakarta.servlet.http.Cookie("SESSION_ID", sessionId.toString())))
+                .andExpect(status().is3xxRedirection())
+                .andExpect(redirectedUrl("/items/" + itemId));
+
+        assertTrue(cartRepository.findBySessionId(sessionId).isEmpty());
+    }
+
+    @Test
+    void testUpdateCartItemInCart() throws Exception {
+        UUID sessionId = UuidCreator.getTimeOrderedEpoch();
+        long itemId = 1L;
+
+        // Добавляем товар через витрину
+        mockMvc.perform(post("/items")
+                        .param("id", Long.toString(itemId))
+                        .param("action", "PLUS")
+                        .cookie(new jakarta.servlet.http.Cookie("SESSION_ID", sessionId.toString())));
+
+        // Увеличиваем количество в корзине
+        mockMvc.perform(post("/cart/items")
+                        .param("id", Long.toString(itemId))
+                        .param("action", "PLUS")
+                        .cookie(new jakarta.servlet.http.Cookie("SESSION_ID", sessionId.toString())))
+                .andExpect(status().is3xxRedirection())
+                .andExpect(redirectedUrl("/cart/items"));
+
+        var cartItems = cartRepository.findBySessionId(sessionId);
+        assertEquals(2, cartItems.getFirst().getCount());
+
+        // Удаляем товар из корзины (DELETE)
+        mockMvc.perform(post("/cart/items")
+                        .param("id", Long.toString(itemId))
+                        .param("action", "DELETE")
+                        .cookie(new jakarta.servlet.http.Cookie("SESSION_ID", sessionId.toString())))
+                .andExpect(status().is3xxRedirection())
+                .andExpect(redirectedUrl("/items")); // Редирект на /items т.к. корзина пуста
+
+        assertTrue(cartRepository.findBySessionId(sessionId).isEmpty());
     }
 }
